AgentforceHackathon/force-app/main/default/objects/Driving_data__c/Driving_data__c.object-meta.xml
<CustomObject>
    <label>Driving data</label>
    <nameField>
        <displayFormat>DDG-{000}</displayFormat>
        <label>Driving data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driving datas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>