AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Air_filter_Clogging_Detection__c.field-meta.xml
<CustomField>
    <fullName>Air_filter_Clogging_Detection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air filter Clogging Detection</label>
    <type>Checkbox</type>
</CustomField>