AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Battery_Health_warning__c.field-meta.xml
<CustomField>
    <fullName>Battery_Health_warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Health warning</label>
    <type>Checkbox</type>
</CustomField>