AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Brake_pad_wear_prediction__c.field-meta.xml
<CustomField>
    <fullName>Brake_pad_wear_prediction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brake pad wear prediction</label>
    <type>Checkbox</type>
</CustomField>