AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>TextArea</type>
</CustomField>