AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Coolant_system_Overheating_trend__c.field-meta.xml
<CustomField>
    <fullName>Coolant_system_Overheating_trend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coolant system Overheating trend</label>
    <type>Checkbox</type>
</CustomField>