AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Driving datas</relationshipLabel>
    <relationshipName>Driving_datas</relationshipName>
    <type>Lookup</type>
</CustomField>