AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/CustomerVehicle__c.field-meta.xml
<CustomField>
    <fullName>CustomerVehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle2__c</referenceTo>
    <relationshipLabel>Driving datas</relationshipLabel>
    <relationshipName>Driving_datas</relationshipName>
    <type>Lookup</type>
</CustomField>