AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Breaking</fullName>
            </value>
            <value>
                <fullName>Tire Pressure Anomalies</fullName>
            </value>
            <value>
                <fullName>Acceleration Patterns</fullName>
            </value>
            <value>
                <fullName>Excessive Idling</fullName>
            </value>
            <value>
                <fullName>High Engine RPMs</fullName>
            </value>
            <value>
                <fullName>Frequent Lane Departure Warnings</fullName>
            </value>
            <value>
                <fullName>Average Speed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>