AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Issues__c.field-meta.xml
<CustomField>
    <fullName>Issues__c</fullName>
    <label>Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>hard_braking</fullName>
            </value>
            <value>
                <fullName>unnecessary_braking</fullName>
            </value>
            <value>
                <fullName>hard_acceleration</fullName>
            </value>
            <value>
                <fullName>speeding</fullName>
            </value>
            <value>
                <fullName>low_tire_pressure_detected</fullName>
            </value>
            <value>
                <fullName>high_tire_pressure_detected</fullName>
            </value>
            <value>
                <fullName>idling_start</fullName>
            </value>
            <value>
                <fullName>high_rpm_low_speed</fullName>
            </value>
            <value>
                <fullName>lane_departure_warning</fullName>
            </value>
            <value>
                <fullName>Lane Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>