AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Next_Step__c.field-meta.xml
<CustomField>
    <fullName>Next_Step__c</fullName>
    <label>Next Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Notify the customer with safety tips</fullName>
            </value>
            <value>
                <fullName>Recommend scheduling a meeting with a technician for driving coaching</fullName>
            </value>
            <value>
                <fullName>No immediate action is required</fullName>
                <default>true</default>
                <label>No immediate action is required</label>
            </value>
            <value>
                <fullName>Action Completed.</fullName>
            </value>
            <value>
                <fullName>Schedules appointment for manual Check - Oil Degradation.</fullName>
            </value>
            <value>
                <fullName>Schedules appointment for manual Check - possible leak and recommends inspection.</fullName>
            </value>
            <value>
                <fullName>Email Notification - Battery Health warning.</fullName>
            </value>
            <value>
                <fullName>Scheduled service - Brake pad wear prediction.</fullName>
            </value>
            <value>
                <fullName>Scheduled service - Coolant system Overheating trend.</fullName>
            </value>
            <value>
                <fullName>Scheduled service - Air filter Clogging Detection.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>