AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Oil_Degradation__c.field-meta.xml
<CustomField>
    <fullName>Oil_Degradation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oil Degradation</label>
    <type>Checkbox</type>
</CustomField>