AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/pressure__c.field-meta.xml
<CustomField>
    <fullName>pressure__c</fullName>
    <label>pressure</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>