AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/reason__c.field-meta.xml
<CustomField>
    <fullName>reason__c</fullName>
    <label>reason</label>
    <length>100</length>
    <type>Text</type>
</CustomField>