AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/recommended__c.field-meta.xml
<CustomField>
    <fullName>recommended__c</fullName>
    <label>recommended</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>