AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/Review_Result__c.field-meta.xml
<CustomField>
    <fullName>Review_Result__c</fullName>
    <label>Review Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>