AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/speed__c.field-meta.xml
<CustomField>
    <fullName>speed__c</fullName>
    <label>speed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>