AgentforceHackathon/force-app/main/default/objects/Driving_data__c/fields/tire__c.field-meta.xml
<CustomField>
    <fullName>tire__c</fullName>
    <label>tire</label>
    <length>18</length>
    <type>Text</type>
</CustomField>